# compliance-checker

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  fly.toml  pom.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: pom.xml
docs/: ARCHITECTURE.md  DEMO.md
docs/superpowers/plans/: 2026-06-09-01-walking-skeleton.md  2026-06-09-02-floorplan-domain-and-editor.md  2026-06-09-03-engine-facts.md  2026-06-09-04-egress-graph-dijkstra.md  2026-06-09-05-rules-resolution-end-to-end.md  2026-06-09-06-ai-rule-codification.md  2026-06-09-07-polish-docs-demo.md  2026-06-12-floorplan-import.md  2026-06-16-demo-recording.md
docs/superpowers/specs/: 2026-06-09-compliance-checker-nz-fire-egress-design.md  2026-06-12-floorplan-import-design.md  2026-06-16-demo-recording-design.md
docs/tutorials/: 01-dijkstra.md  02-machine-learning.md  README.md
engine/: pom.xml
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: demo.spec.ts  overlay.ts
frontend/scripts/: export-demo.mjs
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
frontend/src/api/: checks.ts  floorplans.ts  health.ts  imports.ts  projects.ts  rules.ts  types.ts
frontend/src/editor/: EditorCanvas.test.tsx  EditorCanvas.tsx  EditorPage.tsx  (+10 more)
ml/: README.md  pyproject.toml
ml/data/: rooms.jsonl
ml/src/roomtype/: baseline.py  dataset.py  features.py  geometry.py  labels.py  predict.py  schema.py  seed.py  service.py  train.py
ml/tests/: test_baseline.py  test_geometry.py  test_service.py
(+131 files in other folders)
