[project]
name = "roomtype"
version = "0.1.0"
description = "Room occupancy-type classifier for the compliance-checker import pipeline"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128",
    "uvicorn[standard]>=0.38",
    "pydantic>=2.12",
    "scikit-learn>=1.8",
    "numpy>=2.3",
    "joblib>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "httpx>=0.28",
    "ruff>=0.14",
]

[project.scripts]
roomtype-train = "roomtype.train:main"
roomtype-seed = "roomtype.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roomtype"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
